--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Architect theme
-description: Architect is a theme for GitHub Pages.
+title: PythIT jolly!
+description: Python, Informaton Technology and everything in between, I used to fight response but this time, I'm embracing it all. Fight, jolly! And conquer the IT world!
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-architect
